--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,14 +1,13 @@
 <nav class="navbar navbar-fixed-top">
     <div class="container-fluid">
-      <div class="navbar-header">
-        <div class="navbar-brand">
         <ul class="nav navbar-nav">
           <li><%= link_to "Auctions", root_path %></li>
           <li><%= link_to "Contact", '#' %></li>
           <li><%= link_to "Help", '#' %></li>
-          <li><%= link_to "Log in", '#' %></li>
-          <li><%= link_to "Sign up", '#' %></li>
         </ul>
-      </div>
+        <ul class="nav navbar-nav navbar-right">
+          <li><%= link_to "Log in", new_user_session_path %></li>
+          <li><%= link_to "Sign up", new_user_registration_path %></li>
+        </ul>
     </div>
 </nav>
