Configure travis.yml

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,6 +6,7 @@
           <li><%= link_to "Help", '#' %></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
+          <%= user %>
           <li><%= link_to "Log in", new_user_session_path %></li>
           <li><%= link_to "Sign up", new_user_registration_path %></li>
         </ul>
