--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,9 +6,13 @@
           <li><%= link_to "Help", '#' %></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <%= user %>
-          <li><%= link_to "Log in", new_user_session_path %></li>
-          <li><%= link_to "Sign up", new_user_registration_path %></li>
+          <%unless  user_signed_in? %>
+            <li><%= link_to "Log in", new_user_session_path %></li>
+            <li><%= link_to "Sign up", new_user_registration_path %></li>
+          <% else %>
+              <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+          <% end %>
         </ul>
     </div>
 </nav>
+<%= %>
