--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,6 +10,7 @@
             <li><%= link_to "Log in", new_user_session_path %></li>
             <li><%= link_to "Sign up", new_user_registration_path %></li>
           <% else %>
+              <li><%= link_to "Messages", messages_path %></li>
               <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
           <% end %>
         </ul>
