--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-fixed-top">
     <div class="container-fluid">
         <ul class="nav navbar-nav">
-          <li><%= link_to "Auctions", root_path %></li>
+          <li><%= link_to "Auctions", auctions_path %></li>
           <li><%= link_to "Contact", '#' %></li>
           <li><%= link_to "Help", '#' %></li>
         </ul>
