--- a/app/assets/stylesheets/auctions.scss
+++ b/app/assets/stylesheets/auctions.scss
@@ -1,3 +1,58 @@
-// Place all the styles related to the auctions controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+
+tr.listing:hover {background-color: #f5f5f5}
+table.auctions {
+  border-collapse: collapse;
+  border-spacing: 0px;
+  tr {
+    &.listing {
+      cursor: pointer;
+      width: 100%;
+      border-width: 2px;
+      border-style: solid;
+      border-color: #f5f5f5;
+      -webkit-border-radius: 50px;
+      -moz-border-radius: 50px;
+      border-radius: 50px;
+      box-sizing: content-box;
+      display: table-row;
+      td:first-child {
+        border-radius: 10px 0px 0px 10px;
+        padding-left: 15px;
+      }
+      td:last-child {
+        -webkit-border-radius: 0px 10px 10px 0px;;
+        -moz-border-radius: 0px 10px 10px 0px;;
+        border-radius: 0px 10px 10px 0px;
+    }
+      td {
+
+      }
+    }
+  }
+}
+
+td {
+  padding: 10px;
+}
+
+th.title {
+  padding-left: 15px;
+  width: 60%;
+}
+th.bid {
+  padding-left: 15px;
+  width: 30%
+}
+th.finish {
+  padding-left: 15px;;
+  width: 30%;
+}
+tr:nth-child(even) {
+  background-color: #bcb59e
+}
+tr:nth-child(odd) {
+  background-color: #cfc8b0
+}
+tr:first-child {
+  background-color: inherit
+}
