--- a/app/assets/stylesheets/auctions.scss
+++ b/app/assets/stylesheets/auctions.scss
@@ -1,10 +1,14 @@
-
-tr.listing:hover {background-color: #f5f5f5}
 table.auctions {
   border-collapse: collapse;
   border-spacing: 0px;
   tr {
+    &:first-child {
+      background-color: inherit
+    }
     &.listing {
+      &:hover{
+        background-color: #f5f5f5
+      }
       cursor: pointer;
       width: 100%;
       border-width: 2px;
@@ -23,9 +27,6 @@ table.auctions {
         -webkit-border-radius: 0px 10px 10px 0px;;
         -moz-border-radius: 0px 10px 10px 0px;;
         border-radius: 0px 10px 10px 0px;
-    }
-      td {
-
       }
     }
   }
@@ -55,4 +56,39 @@ tr:nth-child(odd) {
 }
 tr:first-child {
   background-color: inherit
+}
+table.message {
+  border-collapse: collapse;
+  border-spacing: 0px;
+  th.title {
+    padding-left: 15px;
+    width: 90%;
+  }
+  th.author {
+    padding-left: 15px;
+    width: 60%;
+  }
+  tr {
+    &.listing {
+      &:hover{
+        background-color: #f5f5f5
+      }
+      cursor: pointer;
+      width: 100%;
+      -webkit-border-radius: 50px;
+      -moz-border-radius: 50px;
+      border-radius: 50px;
+      box-sizing: content-box;
+      display: table-row;
+      td:first-child {
+        border-radius: 10px 0px 0px 10px;
+        padding-left: 15px;
+      }
+      td:last-child {
+        -webkit-border-radius: 0px 10px 10px 0px;;
+        -moz-border-radius: 0px 10px 10px 0px;;
+        border-radius: 0px 10px 10px 0px;
+      }
+    }
+  }
 }
