--- a/app/assets/stylesheets/auctions.scss
+++ b/app/assets/stylesheets/auctions.scss
@@ -23,6 +23,9 @@ table.auctions {
         border-radius: 10px 0px 0px 10px;
         padding-left: 15px;
       }
+      td:nth-child(2) {
+        padding-left: 15px;
+      }
       td:last-child {
         -webkit-border-radius: 0px 10px 10px 0px;;
         -moz-border-radius: 0px 10px 10px 0px;;
@@ -62,11 +65,15 @@ table.message {
   border-spacing: 0px;
   th.title {
     padding-left: 15px;
-    width: 90%;
+    width: 60%;
   }
   th.author {
     padding-left: 15px;
-    width: 60%;
+    width: 30%;
+  }
+  th.date {
+    padding-left: 15px;
+    width: 50%
   }
   tr {
     &.listing {
@@ -91,4 +98,43 @@ table.message {
       }
     }
   }
+}
+div.new_auction {
+  display: block;
+  input#auction_title{
+    width: 100%;
+  }
+  input#auction_bid{
+    text-align: right;
+  }
+  input#auction_duration{
+    text-align: right;
+  }
+  textarea {
+    resize: none;
+    width: 100%;
+    height: 400px;
+    }
+
+}
+div.new_message {
+  display: block;
+  input#message_title {
+    width: 100%;
+  }
+  input#message_receiver {
+    width: 100%;
+  }
+  textarea {
+    resize: none;
+    width: 100%;
+    height: 400px;
+  }
+}
+div.field_with_errors {
+  height: 100%;
+  width: 100%;
+  color: #cf5a63;
+  font-size: 21px;
+  font-style: italic;
 }
