--- a/app/views/auctions/show.html.erb
+++ b/app/views/auctions/show.html.erb
@@ -2,6 +2,8 @@
     <div>
       <h1> <%= @auction.title %></h1>
       <h3> <%= @auction.description %></h3>
+      <%= image_tag @auction.image%>
+
     </div>
 
 </div>
