--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,5 +1,5 @@
-<table>
-  <%= form_for(@message) do |f| %>
+
+  <%= form_for(@message, html: { multipart: true }) do |f| %>
       <% if @message.errors.any? %>
           <ul>
             <% @message.errors.full_messages.each do |msg| %>
@@ -7,23 +7,19 @@
             <% end %>
           </ul>
       <% end %>
-      <tr>
-        <th><%= f.label :title %></th>
-
-        <td><%= f.text_field :title %></td>
-      </tr>
-      <tr>
-        <th><%= f.label :receiver, 'Receiver e-mail' %></th>
-        <td><%= f.email_field :receiver  %></td>
-      </tr>
-      <tr>
-        <th><%= f.label :content %></th>
-        <td><%= f.text_area :content %></td>
-      </tr>
-      <tr>
-        <td><%= f.submit %></td>
-      </tr>
-
+      <div class="new_message">
+        <p>
+          <%= f.label :title, 'Title:' %>
+        </p>
+        <p>
+          <%= f.text_field :title %>
+        </p>
+        <p><%= f.label :receiver, 'To:' %></p>
+        <p><%= f.email_field :receiver  %></p>
+        <p><%= f.label :content, 'Message:' %></p>
+        <p><%= f.text_area :content %></p>
+        <p id="sumbit"><%= f.submit %></p>
+      </div>
   <%end %>
 
-</table>
+
