--- a/app/views/auctions/new.html.erb
+++ b/app/views/auctions/new.html.erb
@@ -19,8 +19,8 @@
         <%= f.text_area :description  %>
       </div>
       <p>
-      <%= f.label :bid, 'Starting price' %>
-      <%= f.number_field :bid, min: 0%>
+      <%= f.label :starting_price %>
+      <%= f.number_field :starting_price, min: 0%>
 
       <%= f.label :duration %>
       <%= f.number_field :duration, in: 1..14 %>
