--- a/app/assets/stylesheets/auctions.scss
+++ b/app/assets/stylesheets/auctions.scss
@@ -104,7 +104,7 @@ div.new_auction {
   input#auction_title{
     width: 100%;
   }
-  input#auction_bid{
+  input#auction_starting_price{
     text-align: right;
   }
   input#auction_duration{
