--- a/app/views/auctions/show.html.erb
+++ b/app/views/auctions/show.html.erb
@@ -1,23 +1,25 @@
-<div>
-    <div class="title">
-      <h1> <%= @auction.title %></h1>
-    </div>
-
-    <div class="image_and_bid">
-      <%= image_tag @auction.image%>
-
+<div class="title">
+    <h1> <%= @auction.title %></h1>
+</div>
+<table class="auction">
+  <tr>
+    <th class="img"></th>
+    <th class="bid"></th>
+  </tr>
+  <tr>
+    <td class="img"><%= image_tag @auction.image%></td>
+    <td class="bid">
+      <p> Current price: <%=@auction.bid.value %></p>
+      <p> Last bid at: <%=@auction.bid.updated_at.strftime('%T %F') %></p>
       <%= form_for(@auction.bid, include_id: true) do |f| %>
-
-          <%= f.label :value, 'Price:'%>
+          <br><%= f.label :value, 'Your price:'%>
           <%= f.number_field :value, min: @auction.bid.value%>
 
-          <%= f.submit %>
+        <br> <%= f.submit %>
       <% end %>
-      <%= @auction.bid.value %>
-      <%= link_to %>
-    </div>
-
-    <div class="description">
-       <h2><%= @auction.description %></h2>
-    </div>
+    </td>
+  </tr>
+</table>
+<div class="description">
+  <h2><%= @auction.description %></h2>
 </div>
