--- a/app/views/auctions/show.html.erb
+++ b/app/views/auctions/show.html.erb
@@ -9,13 +9,32 @@
   <tr>
     <td class="img"><%= image_tag @auction.image%></td>
     <td class="bid">
-      <p> Current price: <%=@bid.value %></p>
-      <p> Last bid at: <%=@bid.created_at.strftime('%T %F') %></p>
-      <%= form_for([@auction, @auction.bids.new]) do |f| %>
-          <br><%= f.label :value, 'Your price:'%>
-          <%= f.number_field :value%>
+      <% if @auction.finish_date > DateTime.now %>
+        <p> Auction ends in:
 
-          <br> <%= f.submit %>
+        <div id="finish-in"></div></p>
+        <script type="text/javascript">
+          $("#finish-in").countdown("<%= @auction.finish_date %>")
+          .on('update.countdown', function(event) {
+             var format = '%H:%M:%S';
+             if(event.offset.days > 0) {
+                format = '%-D day%!D ' + format;
+             }
+             $(this).html(event.strftime(format));
+          });
+        </script>
+          <p> Current price: <%=@bid.value %></p>
+          <p> Last bid at: <%=@bid.created_at.strftime('%T %F') %></p>
+          <%= form_for([@auction, @auction.bids.new]) do |f| %>
+              <br><%= f.label :value, 'Your price:'%>
+              <%= f.number_field :value, min: 0%>
+
+              <br> <%= f.submit %>
+          <% end %>
+      <% else %>
+          <p>Auction finished !</p>
+          <p>Higher bid: <%= @bid.value %></p>
+          <p>Set by: <%= User.find_by(id: @bid.user_id).email[0..3] + "..." %></p>
       <% end %>
     </td>
   </tr>
