--- a/app/views/messages/new.html.haml
+++ b/app/views/messages/new.html.haml
@@ -4,12 +4,12 @@
       - @message.errors.full_messages.each do |msg|
         %li= msg
   .new_message
-    %p
-      = f.label :title, 'Title:'
-    %p
-      = f.text_field :title
+    %p= f.label :title, 'Title:'
+    %p= f.text_field :title, value: params[:title]
+
     %p= f.label :receiver, 'To:'
-    %p= f.email_field :receiver
+    %p= f.email_field :receiver, value: params[:receiver]
+
     %p= f.label :content, 'Message:'
     %p= f.text_area :content
     %p#sumbit= f.submit
