--- a/app/views/auctions/show.html.haml
+++ b/app/views/auctions/show.html.haml
@@ -1,7 +1,7 @@
 .title
   %h1
     = @auction.title
-=render 'auction_details'
+=render 'auctions/auction_details'
 
 .description
   %h2= @auction.description
@@ -9,5 +9,5 @@
 .Biding.history
   %h2 Biding history
 
-=render 'biding_history'
+=render 'auctions/biding_history'
 
